# debugml-env

./: .gitignore  Dockerfile  README.md  app.py  dockerfile  inference.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: sync-space.yml
env/: environments.py  models.py
server/: app.py
